--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             50% { opacity: 0.6; }
         }
         .animate-pulse-slow { animation: pulse-slow 3s infinite; }
+        .option-btn:active { transform: scale(0.98); background: rgba(255, 255, 255, 0.15); }
     </style>
 </head>
 <body class="min-h-screen flex items-center justify-center p-4 relative">
@@ -61,7 +62,7 @@
 
         // Firebase 服務實例
         let db, auth;
-        const appId = typeof __app_id !== 'undefined' ? __app_id : 'cosmic-quiz-v6';
+        const appId = typeof __app_id !== 'undefined' ? __app_id : 'cosmic-quiz-v7';
         const googleSheetUrl = "https://script.google.com/macros/s/AKfycbzsffAQD5mEX_8hXcxLECHzaceLhKlrDQA6RbeFH88LpSicUDIeEh9mJCumyFU3EYYt7A/exec"; 
 
         // 初始化 Firebase
@@ -86,29 +87,199 @@
             console.error("Firebase Initialization Failed:", e);
         }
 
-        // 題目改為白話、易懂的二選一
-        const questions = [
-            { q: "在週末，你通常比較喜歡哪種活動？", a: "跟一群朋友出去聚會或慶祝", b: "待在家看書、看電影或自己靜一靜" },
-            { q: "到了一個新環境（如新班級或公司），你會？", a: "主動找身邊的人聊天，認識新朋友", b: "先安靜觀察，等別人來跟你說話" },
-            { q: "當你心情不好時，哪種方式讓你覺得比較放鬆？", a: "找人說說話，把壓力發洩出來", b: "獨自思考，讓情緒慢慢沈澱" },
-            { q: "朋友通常怎麼形容你？", a: "熱情、愛說話、活潑開朗", b: "沈穩、話不多、安靜內向" },
-            { q: "在開會或分組討論時，你通常是？", a: "主動發表意見並引導話題", b: "多數時間都在聽，想清楚後才發言" },
-            { q: "你比較喜歡哪種工作環境？", a: "可以隨時與同事互動、溝通的熱鬧環境", b: "能讓自己專注、不受打擾的安靜空間" },
-            { q: "去參加聚會後，你的感覺是？", a: "覺得精神百倍，整個人都活過來了", b: "雖然很開心，但覺得社交完好累，想趕快回家" },
-            { q: "對於「成為大家的焦點」，你的想法是？", a: "並不介意，甚至覺得滿自在的", b: "感到不太自在，想盡快退到後方" },
-            { q: "你比較容易記住別人的？", a: "長相與他當時說過的有趣笑話", b: "他給人的整體感覺或細節特質" },
-            { q: "你做決定時，通常依賴？", a: "當下的直覺或大家的共識", b: "自己的邏輯分析或過去的經驗" },
-            { q: "當你獨處太久時，你會？", a: "覺得無聊，很想傳訊息找人聊天", b: "覺得非常充實，很享受這段時光" },
-            { q: "在陌生人的社交場合中，你會？", a: "很快就能跟人打成一片", b: "會比較害羞，需要比較多時間適應" },
-            { q: "你喜歡的生活節奏是？", a: "充滿變化，每天都有新事物發生", b: "規律穩定，一切都在掌握之中" },
-            { q: "跟人說話時，你通常？", a: "邊想邊說，想到什麼就說什麼", b: "在腦袋裡過濾一遍後才說出來" },
-            { q: "遇到困難時，你的第一反應是？", a: "趕快找人商量，聽聽別人的看法", b: "自己先想辦法解決，不行的話再求救" },
-            { q: "你比較受不了？", a: "一整天都沒有人可以說話", b: "一整天都在跟人說話，沒有私人空間" },
-            { q: "當你在專注工作時，有人來找你聊天？", a: "沒關係，正好可以休息一下", b: "覺得很煩，打斷了我的思路" },
-            { q: "你喜歡的運動類型？", a: "籃球、足球等團體性的競賽運動", b: "慢跑、重訓、游泳等個人的運動" },
-            { q: "對於分享自己的私生活？", a: "很樂意在社群平台分享", b: "非常低調，只有少數好友才知道" },
-            { q: "你覺得自己更像？", a: "充滿能量的太陽，溫暖周圍", b: "深邃的海洋，內心平靜但豐富" }
+        // 題目設計：四選一，分數權重不同 (3=最外向, 0=最內向)
+        // 選項將在程式啟動時隨機打亂，讓使用者無法預測
+        const questionsSource = [
+            {
+                q: "終於等到週末了，你通常會怎麼安排？",
+                options: [
+                    { text: "跟一大群朋友去唱歌、吃飯或派對，越熱鬧越好", score: 3 },
+                    { text: "約一兩個知心好友去咖啡廳聊聊天", score: 2 },
+                    { text: "一個人去書店逛逛，或去公園散步", score: 1 },
+                    { text: "宅在家裡追劇、打電動，完全不想出門", score: 0 }
+                ]
+            },
+            {
+                q: "剛到一個充滿陌生人的新環境（如新班級、新公司），你會？",
+                options: [
+                    { text: "主動跟每個人打招呼，交換聯絡方式", score: 3 },
+                    { text: "先觀察氣氛，有人跟我對到眼再講話", score: 2 },
+                    { text: "只跟看起來比較友善的一兩個人講話", score: 1 },
+                    { text: "默默找個角落或是滑手機，避免眼神接觸", score: 0 }
+                ]
+            },
+            {
+                q: "心情低落或是壓力很大的時候，你通常會？",
+                options: [
+                    { text: "立刻找朋友出來大吐苦水，發洩情緒", score: 3 },
+                    { text: "在社群媒體上發文，或是傳訊息給好友", score: 2 },
+                    { text: "戴上耳機聽音樂，或是出門走走沈澱一下", score: 1 },
+                    { text: "把自己關在房間裡睡覺或放空，不想說話", score: 0 }
+                ]
+            },
+            {
+                q: "朋友聚會中，如果出現冷場或尷尬的沈默，你會？",
+                options: [
+                    { text: "受不了安靜，馬上找話題來炒熱氣氛", score: 3 },
+                    { text: "會試著接話，但不一定會當那個主導者", score: 2 },
+                    { text: "會稍微觀察一下大家的表情，如果沒人說話就繼續保持安靜", score: 1 },
+                    { text: "覺得安靜也沒關係，順其自然", score: 0 }
+                ]
+            },
+            {
+                q: "在工作或分組討論時，你的角色通常是？",
+                options: [
+                    { text: "主動發表意見，並引導大家討論的方向", score: 3 },
+                    { text: "會適時補充想法，支持別人的意見", score: 2 },
+                    { text: "多數時間在聽，最後才總結或是不發言", score: 1 },
+                    { text: "傾向獨自完成分配到的部分，不喜歡開會", score: 0 }
+                ]
+            },
+            {
+                q: "對於「成為眾人焦點」（例如上台領獎或表演），你的感覺是？",
+                options: [
+                    { text: "非常享受，覺得這是展現自己的好機會", score: 3 },
+                    { text: "雖然有點緊張，但心裡還是有點開心的", score: 2 },
+                    { text: "不排斥，但如果是像上台報告這種有準備的比較好，臨時被點名會想躲", score: 1 },
+                    { text: "能避就避，覺得非常不自在", score: 0 }
+                ]
+            },
+            {
+                q: "參加完一場大型社交活動（如婚禮、尾牙）後，你的狀態是？",
+                options: [
+                    { text: "覺得意猶未盡，還想續攤", score: 3 },
+                    { text: "覺得還不錯，但差不多該回家休息了", score: 2 },
+                    { text: "當下覺得還好，但回到家後會突然覺得不想再講話了", score: 1 },
+                    { text: "覺得精神被掏空，需要立刻回家獨處充電", score: 0 }
+                ]
+            },
+            {
+                q: "你比較容易記住新朋友的什麼特徵？",
+                options: [
+                    { text: "他的名字、長相和他當時說的好笑笑話", score: 3 },
+                    { text: "記得我們聊過的話題內容，但名字可能要對一下", score: 2 },
+                    { text: "聊天的氛圍和他給人的感覺", score: 1 },
+                    { text: "不太容易記住陌生人，除非有深度交流", score: 0 }
+                ]
+            },
+            {
+                q: "遇到困難需要做決定時，你習慣？",
+                options: [
+                    { text: "趕快問大家的意見，透過討論來釐清", score: 3 },
+                    { text: "先問幾個信任的人，再自己做決定", score: 2 },
+                    { text: "會先上網查資料或看評論，盡量不麻煩別人", score: 1 },
+                    { text: "自己關起門來分析利弊，想清楚再說", score: 0 }
+                ]
+            },
+            {
+                q: "如果有一個週末完全沒有任何行程，你會？",
+                options: [
+                    { text: "覺得很慌，趕快傳訊息問朋友要不要出來", score: 3 },
+                    { text: "覺得有點無聊，可能會去逛逛街", score: 2 },
+                    { text: "會想做點有生產力的事，比如整理房間或學點東西，不一定要出門", score: 1 },
+                    { text: "覺得太棒了！終於可以好好享受獨處時光", score: 0 }
+                ]
+            },
+            {
+                q: "在路上遇到不太熟的同事或同學，你會？",
+                options: [
+                    { text: "大聲打招呼，並停下來閒聊幾句", score: 3 },
+                    { text: "會停下來簡單寒暄幾句，問問最近好不好", score: 2 },
+                    { text: "微笑點頭示意，然後繼續走", score: 1 },
+                    { text: "假裝沒看到或低頭滑手機，避免尷尬", score: 0 }
+                ]
+            },
+            {
+                q: "你喜歡的生活節奏是？",
+                options: [
+                    { text: "行程滿檔，每天都有新鮮事", score: 3 },
+                    { text: "動靜皆宜，有聚會也有獨處", score: 2 },
+                    { text: "雖然喜歡規律，但偶爾有些小驚喜也不錯", score: 1 },
+                    { text: "規律穩定，不喜歡太多突發狀況", score: 0 }
+                ]
+            },
+            {
+                q: "跟別人說話時，你的習慣是？",
+                options: [
+                    { text: "邊想邊說，想到什麼就講什麼", score: 3 },
+                    { text: "看熟不熟，熟的話就霹哩啪拉講，不熟就謹慎一點", score: 2 },
+                    { text: "會先在腦中組織好語言，再說出口", score: 1 },
+                    { text: "話很少，通常是用簡短的句子回應", score: 0 }
+                ]
+            },
+            {
+                q: "對於分享自己的私生活（如發限時動態）？",
+                options: [
+                    { text: "很樂意分享，幾乎每天都會發好幾則", score: 3 },
+                    { text: "偶爾遇到特別的事情才會發", score: 2 },
+                    { text: "很少發，或是只發給摯友看", score: 1 },
+                    { text: "完全不發，注重隱私", score: 0 }
+                ]
+            },
+            {
+                q: "當你在專注做一件事時，有人來找你聊天？",
+                options: [
+                    { text: "沒關係，正好休息一下聊聊天", score: 3 },
+                    { text: "會先應付幾句，再看情況結束對話", score: 2 },
+                    { text: "雖然不會生氣，但會希望能快點結束對話回到工作上", score: 1 },
+                    { text: "覺得被打擾很煩躁，希望能趕快結束", score: 0 }
+                ]
+            },
+            {
+                q: "你喜歡的運動或休閒活動類型通常是？",
+                options: [
+                    { text: "籃球、羽球等團體或雙人競技運動", score: 3 },
+                    { text: "跟朋友一起去健身房或爬山", score: 2 },
+                    { text: "參加團體課程（如瑜伽班），雖然是一起做但不用太多交流", score: 1 },
+                    { text: "慢跑、游泳、閱讀等可以自己完成的活動", score: 0 }
+                ]
+            },
+            {
+                q: "如果要去旅行，你偏好？",
+                options: [
+                    { text: "跟一大群朋友包棟民宿，晚上一起烤肉", score: 3 },
+                    { text: "跟伴侶或閨蜜兩三個人的深度旅遊", score: 2 },
+                    { text: "跟家人去定點度假，不用一直跑行程", score: 1 },
+                    { text: "一個人的背包客旅行，享受流浪的感覺", score: 0 }
+                ]
+            },
+            {
+                q: "電話響了，看到是不熟的號碼，你會？",
+                options: [
+                    { text: "直接接起來，好奇是誰找我", score: 3 },
+                    { text: "會猶豫一下，想說是快遞還是外送才接", score: 2 },
+                    { text: "盯著螢幕看很久，心裡糾結要不要接，最後通常沒接", score: 1 },
+                    { text: "直接掛斷或不理會，然後去Google號碼", score: 0 }
+                ]
+            },
+            {
+                q: "你覺得哪句話比較像你？",
+                options: [
+                    { text: "我是大家的開心果，有我在就不無聊", score: 3 },
+                    { text: "我是一個很好的協調者，喜歡在團體中幫忙連結大家", score: 2 },
+                    { text: "我是一個很好的傾聽者，朋友喜歡找我聊心事", score: 1 },
+                    { text: "我是一個安靜的觀察者，喜歡在一旁看著大家", score: 0 }
+                ]
+            },
+            {
+                q: "最後，你覺得自己的能量來源更像？",
+                options: [
+                    { text: "太陽：向外輻射光芒，溫暖他人", score: 3 },
+                    { text: "月亮：反射光芒，溫柔且多變", score: 2 },
+                    { text: "山脈：穩重且安靜，讓人有依靠感", score: 1 },
+                    { text: "深海：深邃平靜，蘊含強大內在力量", score: 0 }
+                ]
+            }
         ];
+
+        // 深拷貝並隨機打亂每個問題的選項順序
+        let questions = JSON.parse(JSON.stringify(questionsSource));
+        questions.forEach(q => {
+            for (let i = q.options.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [q.options[i], q.options[j]] = [q.options[j], q.options[i]];
+            }
+        });
 
         function render() {
             const container = document.getElementById('app');
@@ -131,25 +302,33 @@
                 document.getElementById('startBtn').onclick = handleStart;
             } else if (state.view === 'quiz') {
                 const q = questions[state.currentQ];
+                
+                // 動態生成選項按鈕（因為順序隨機，不顯示 A/B/C/D 標籤，直接顯示內容）
+                const optionsHtml = q.options.map((opt, idx) => `
+                    <button class="option-btn w-full p-4 bg-white/5 border border-white/5 rounded-2xl text-left text-sm hover:border-indigo-500/50 transition-all hover:bg-white/10 mb-3 leading-relaxed flex items-center" onclick="handleAnswer(${opt.score})">
+                        <span class="mr-3 opacity-50 text-xs">◆</span> ${opt.text}
+                    </button>
+                `).join('');
+
                 container.innerHTML = `
                     <div class="glass p-8 rounded-[40px]">
-                        <div class="flex justify-between items-center mb-10">
+                        <div class="flex justify-between items-center mb-8">
                             <div class="w-full h-1 bg-gray-900 rounded-full mr-4 overflow-hidden">
-                                <div class="h-full bg-indigo-500 transition-all duration-300" style="width: ${((state.currentQ + 1) / 20) * 100}%"></div>
+                                <div class="h-full bg-indigo-500 transition-all duration-300" style="width: ${((state.currentQ + 1) / questions.length) * 100}%"></div>
                             </div>
-                            <span class="text-[10px] font-mono text-gray-500">${String(state.currentQ + 1).padStart(2, '0')}/20</span>
+                            <span class="text-[10px] font-mono text-gray-500">${String(state.currentQ + 1)}/${questions.length}</span>
                         </div>
-                        <h2 class="text-xl leading-relaxed mb-12 min-h-[6rem] serif">${q.q}</h2>
-                        <div class="space-y-4">
-                            <button id="ansA" class="w-full p-5 bg-white/5 border border-white/5 rounded-2xl text-left text-base hover:border-indigo-500/50 transition-all hover:bg-white/10">${q.a}</button>
-                            <button id="ansB" class="w-full p-5 bg-white/5 border border-white/5 rounded-2xl text-left text-base hover:border-indigo-500/50 transition-all hover:bg-white/10">${q.b}</button>
+                        <h2 class="text-lg font-medium leading-relaxed mb-8 min-h-[4rem] serif tracking-wide">${q.q}</h2>
+                        <div class="flex flex-col">
+                            ${optionsHtml}
                         </div>
                     </div>
                 `;
-                document.getElementById('ansA').onclick = () => handleAnswer(1);
-                document.getElementById('ansB').onclick = () => handleAnswer(0);
             } else if (state.view === 'result') {
-                const isE = state.scoreE >= 11;
+                // 判斷 E/I: 總分最高 60 分 (20題 * 3分)
+                // 設定閾值為 30 分
+                const isE = state.scoreE >= 30;
+                
                 container.innerHTML = `
                     <div class="glass p-8 rounded-[40px] max-h-[85vh] overflow-y-auto custom-scrollbar">
                         ${state.isSaving ? `
@@ -252,24 +431,36 @@
         function handleStart() {
             if (!state.name.trim()) return;
             state.view = state.name === 'admin::99' ? 'adminAuth' : 'quiz';
+            // 每次重新開始測驗時，都重新洗牌選項
+            if (state.view === 'quiz') {
+                 questions = JSON.parse(JSON.stringify(questionsSource));
+                 questions.forEach(q => {
+                    for (let i = q.options.length - 1; i > 0; i--) {
+                        const j = Math.floor(Math.random() * (i + 1));
+                        [q.options[i], q.options[j]] = [q.options[j], q.options[i]];
+                    }
+                });
+            }
             render();
         }
 
-        function handleAnswer(p) {
+        // 修改 handleAnswer 以接受具體分數
+        window.handleAnswer = (p) => {
             state.scoreE += p;
             if (state.currentQ + 1 < questions.length) {
                 state.currentQ++;
                 render();
-            } else { finishQuiz(); }
-        }
+            } else { 
+                finishQuiz(); 
+            }
+        };
 
         // 全域回饋函數
         window.sendFeedback = async (level) => {
             state.feedbackSent = true;
             render();
 
-            // 更新本次測驗的紀錄（加進回饋欄位）
-            const isE = state.scoreE >= 11;
+            const isE = state.scoreE >= 30;
             const payload = {
                 name: state.name,
                 result: isE ? "E型" : "I型",
@@ -278,7 +469,6 @@
                 timestamp: Date.now()
             };
 
-            // 同步回傳回饋數據
             if (db) {
                 try {
                     const col = collection(db, 'artifacts', appId, 'public', 'data', 'quizLogs');
@@ -303,7 +493,7 @@
             state.isSaving = true;
             render();
 
-            const isE = state.scoreE >= 11;
+            const isE = state.scoreE >= 30; // 調整閾值 (20題 * 3分 = 60分滿分, 中間值30)
             const payload = {
                 name: state.name,
                 result: isE ? "E型" : "I型",
